--- a/Arc_Ai/Arc_Ai/core/static/styles/styles.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/styles.css
@@ -308,11 +308,18 @@ body {
     margin: 0; /* Remove default margin */
 }
 
+.title-and-date {
+    display: flex;
+    justify-content: space-between; /* Ensures the span stays at the end of the line */
+    align-items: center; /* Aligns them vertically */
+    width: 100%; /* Ensures the container spans the full width */
+    word-break: break-word; /* Allows long words in the p to wrap */
+}
+
 .notification_item span {
     font-size: 14px;
+    font-family: 'Arial', sans-serif;
     color: #353A56;
-    align-self: flex-end; /* Align the timestamp to the right */
-    margin-left: 170px; /* Add space between the text and the timestamp */
 }
 
 .notification_item:hover {
