--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -28,30 +28,12 @@
         <div id="notification_list">
             <ul>
                 <li class="notification_item" data-detail="General meeting at 10:30 AM on January 3, 2024, will be held in the main conference room. All employees are expected to attend this important session where key company updates and strategic initiatives for the upcoming year will be discussed.">
-                    <p>Schedule Update <span>Yesterday</span></p>
+                    <div class="title-and-date">
+                        <p>Schedule Update</p>
+                        <span>Yesterday</span>
+                    </div>
                     <p class="short-description">General meeting at 10:30AM on Jan 3, 202 General meeting at 10:30AM on Jan 3, 202</p>
                     <p class="posted-by">- Imee Duterte</p>
-                    
-                </li>
-                <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update <span>Yesterday</span></p>
-                    <p class="short-description">Another meeting detail here General meeting at 10:30AM on Jan 3, 202 General meet</p>
-                    <p class="posted-by">- John Doe</p>
-                </li>
-                <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update <span>Yesterday</span></p>
-                    <p class="short-description">Another meeting detail here</p>
-                    <p class="posted-by">- Sarah Marcos</p>
-                </li>
-                <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update <span>Yesterday</span></p>
-                    <p class="short-description">Another meeting detail here</p>
-                    <p class="posted-by">- Ginno Arostique</p>
-                </li>
-                <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update <span>Yesterday</span></p>
-                    <p class="short-description">Another meeting detail here</p>
-                    <p class="posted-by">- Ginno Arostique</p>
                 </li>
             </ul>
         </div>
@@ -118,7 +100,7 @@
                             <p>Project ID: HR-2024-ONB-01</p>
                             <p class="space">Start Date: 2024/11/10</p>
                             <p>Finished Date: -</p>
-                            <p class="status">Ongoing</p>
+                            <p class="status1">Ongoing</p>
                         </div>
                     </div>  
                 </div>
@@ -164,7 +146,7 @@
                             </div>
                             <div class="card-body">
                             <h3>{{project.name}}</h3>
-                            <div class="project-details">
+                            <div class="project-detailscard">
 
                                 <p>{{project.project_id}}</p>
                                 <div class="dategroup">
