--- a/Arc_Ai/Arc_Ai/core/templates/core/signup_details.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/signup_details.html
@@ -17,7 +17,7 @@
                 <h5 style="color: red;">{{message}}</h5>
                 {% endfor %}
 
-                <form id="form" method="post" action="{% url 'core:login' %}">
+                <form id="form" method="post" action="{% url 'core:signup_details' %}">
                     {% csrf_token %}
                     <div id="signin_form">
                         <h1 class="titles justify-center">Acount Setup</h1>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label for="complete_address">Complete Address:</label>
-                            <input type="complete_address" id="complete_address" name="complete_addess" required>
+                            <input type="complete_address" id="complete_address" name="complete_address" required>
                         </div>
                         <div class="form-group">
                             <label for="contact_number">Contact Number:</label>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
 
-                <script>
+                <!-- <script>
                     function selectProfilePicture(img) {
                         // Update the selected profile picture
                         document.getElementById('selected_profile_pic').src = img.src;
@@ -86,7 +86,7 @@
                         // Save the selected image path in the hidden input field
                         document.getElementById('profile_avatar').value = img.src;
                     }
-                </script>
+                </script> -->
                     
                 <div id="main_logo">
                     <img id="welcome_logo" src="{% static 'Images/LogoV2.png' %}" alt="Arc.Ai Logo">
