--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -40,7 +40,8 @@
     </div>
     <!-- Detailed Notification -->
     <div id="detailed_notification" class="hidden">
-        <h2 id="notification_title">Schedule Update</h2><p class="notification_date">Yesterday, January 29, 2025</p>
+        <h2 id="notification_title">Schedule Update</h2>
+        <p class="notification_date">Yesterday, January 29, 2025</p>
         <button id="close_detailed_notification" class="close-btn">&times;</button>
         <p id="notification_detail"></p>
         <p class="posted-by">- Imee Duterte, Team Head</p>
