--- a/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
@@ -96,82 +96,87 @@
         </div>
     </div>
 
-
-    <div id="content">
-        <div id="signin_form">
-            <h1 class="titles justify-center">Edit User Information</h1>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="first_name">First Name:</label>
-                <input type="first_name" id="first_name" name="first_name" required>
-            </div>
-            <div class="form-group">
-                <label for="middle_initial">Middle Initial:</label>
-                <input type="middle_initial" id="middle_initial" name="middle_initial" required>
-            </div>
-            <div class="form-group">
-                <label for="last_name">Last Name:</label>
-                <input type="last_name" id="last_name" name="last_name" required>
-            </div>
-            <div class="form-group">
-                <label for="complete_address">Complete Address:</label>
-                <input type="complete_address" id="complete_address" name="complete_address" required>
-            </div>
-            <div class="form-group">
-                <label for="contact_no">Contact No.:</label>
-                <input type="number" id="contact_no" name="contact_no" required>
-            </div>
-            <div id="age-gender_container">
+    <form method="post" action="{% url 'core:edit_user_profile' %}" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div id="content">
+            <div id="signin_form">
+                <h1 class="titles justify-center">Edit User Information</h1>
                 <div class="form-group">
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age" required>
-                </div>
-                <div class="form-group" id="gender_container">
-                    <label for="gender">Gender:</label>
-                    <select id="gender" name="gender" required>
-                        <option value="" disabled selected>Select your gender</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-            </div>
-            <div id="department-position_container">
-                <div class="form-group">
-                    <label for="department">Departmant:</label>
-                    <select id="department" name="department" required>
-                        <option value="" disabled selected>Select your Department</option>
-                        <option value="HR">HR</option>
-                        <option value="IT">IT</option>
-                    </select>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" value="{{ personal_info.email }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="position">Position:</label>
-                    <select id="position" name="position" required>
-                        <option value="" disabled selected>Select your Position</option>
-                        <option value="male">Manager</option>
-                        <option value="female">Employee</option>
-                    </select>
+                    <label for="first_name">First Name:</label>
+                    <input type="text" id="first_name" name="first_name" value="{{ personal_info.first_name }}" required>
+                </div>
+                <div class="form-group">
+                    <label for="middle_initial">Middle Initial:</label>
+                    <input type="text" id="middle_initial" name="middle_initial" value="{{ personal_info.middle_initial }}" required>
+                </div>
+                <div class="form-group">
+                    <label for="last_name">Last Name:</label>
+                    <input type="text" id="last_name" name="last_name" value="{{ personal_info.last_name }}" required>
+                </div>
+                <div class="form-group">
+                    <label for="complete_address">Complete Address:</label>
+                    <input type="text" id="complete_address" name="complete_address" value="{{ personal_info.complete_address }}" required>
+                </div>
+                <div class="form-group">
+                    <label for="contact_no">Contact No.:</label>
+                    <input type="number" id="contact_no" name="contact_no" value="{{ personal_info.contact_number }}" required>
+                </div>
+                <div id="age-gender_container">
+                    <div class="form-group">
+                        <label for="age">Age:</label>
+                        <input type="number" id="age" name="age" value="{{ personal_info.age }}" required>
+                    </div>
+                    <div class="form-group" id="gender_container">
+                        <label for="gender">Gender:</label>
+                        <select id="gender" name="gender" required>
+                            <option value="" disabled>Select your gender</option>
+                            <option value="male" {% if personal_info.gender == "male" %}selected{% endif %}>Male</option>
+                            <option value="female" {% if personal_info.gender == "female" %}selected{% endif %}>Female</option>
+                            <option value="other" {% if personal_info.gender == "other" %}selected{% endif %}>Other</option>
+                        </select>
+                    </div>
+                </div>
+                <div id="department-position_container">
+                    <div class="form-group">
+                        <label for="department">Department:</label>
+                        <select id="department" name="department" required>
+                            <option value="" disabled>Select your Department</option>
+                            <option value="HR" {% if personal_info.department == "HR" %}selected{% endif %}>HR</option>
+                            <option value="IT" {% if personal_info.department == "IT" %}selected{% endif %}>IT</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="position">Position:</label>
+                        <select id="position" name="position" required>
+                            <option value="" disabled>Select your Position</option>
+                            <option value="Manager" {% if personal_info.position == "Manager" %}selected{% endif %}>Manager</option>
+                            <option value="Employee" {% if personal_info.position == "Employee" %}selected{% endif %}>Employee</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="profile_avatar">Profile Picture:</label>
+                    <input type="file" id="profile_avatar" name="profile_avatar">
                 </div>
             </div>
         </div>
-        <div id="logo_container" class="gap">
-            <div id="select_profile">
-                <div id="active_profile_pic">
-                    <img id="selected_profile_pic" src="{% static 'Images/Profile.png' %}">
-                </div>
-                <p>Select Profile Picture</p>
-                <div class="profile_pic_cntr">
-                    <!-- Add 15 clickable images -->
-                    {% for i in range %}
-                        {% with "Images/Profile" as base_path %}
-                        <img class="profile_pic_option" src="{% static base_path %}{{ i }}.png" alt="Profile Picture {{ i }}" onclick="selectProfilePicture(this)">
-                        {% endwith %}
-                    {% endfor %}
-                </div>
+    </form>
+    <div id="logo_container" class="gap">
+        <div id="select_profile">
+            <div id="active_profile_pic">
+                <img id="selected_profile_pic" src="{% static 'Images/Profile.png' %}">
+            </div>
+            <p>Select Profile Picture</p>
+            <div class="profile_pic_cntr">
+                {% for i in range %}
+                    {% with "Images/Profile" as base_path %}
+                    <img class="profile_pic_option" src="{% static base_path %}{{ i }}.png" alt="Profile Picture {{ i }}" onclick="selectProfilePicture(this)">
+                    {% endwith %}
+                {% endfor %}
             </div>
         </div>
     </div>
