feature: very nice

--- a/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
@@ -104,7 +104,7 @@
             <h3 class="user-title">{{personal_information.user_title}}</h3>
         </div>
         <div class="setting-icon">
-            <img src="{% static 'Images/file-icon.png' %}" alt="Settings Icon">
+            <img src="{% static 'Images/dots.png' %}" alt="Settings Icon">
         </div>
     </section>
 
