--- a/Arc_Ai/Arc_Ai/core/static/styles/saved.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/saved.css
@@ -89,7 +89,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2px 7px;
+    padding: 5px 10px;
     margin-bottom: auto;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -102,33 +102,42 @@
 
 /* Style the file icon */
 .file-icon img {
-    width: 40px;
-    height: 40px;
+    width: 15px;
+    height: 15px;
     margin-right: 15px;
 }
 
 /* Style the file details */
 .file-details {
-    flex: 2;
+    display: flex;
+    align-items: center;
+    gap: 15px; /* Space between details */
+    flex: 1; /* Allow details to take up remaining space */
+    overflow: hidden; /* Prevent overflow */
+    white-space: nowrap; /* Prevent wrapping */
 }
 
-.file-name a {
+.file-name {
     text-decoration: none;
     color: black;
     font-weight: 500;
     font-family: 'Inter', sans-serif;
-}
-
-.file-name a:hover {
-    color: black;
+    overflow: hidden; /* Hide overflow */
+    text-overflow: ellipsis; /* Add ellipsis for long text */
+    width: 500px; /* Limit width */
 }
 
 .file-owner {
     font: "Inter", sans-serif;
-    font-size: 0.9em;
     font-weight: 200;
+    width: 200px;
 }
 
+.file-date{
+    font: "Inter", sans-serif;
+    font-weight: 200;
+    width: 200px;
+}
 /* Style the file metadata */
 .file-meta {
     flex: 1;
