--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
@@ -61,21 +61,37 @@
     </div>
 </div>
 
-    <div id="header">
-        <div>
-            <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
-        </div>
-        <div id="header_nav" class="text_white">
-            <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
-            <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
-            <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
-            <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-            <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
-        </div>
-        <div>
-            <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
-        </div>
+<div id="header">
+    <div>
+        <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
     </div>
+    <div id="header_nav" class="text_white">
+
+        {% if user.is_staff %}
+        <!-- Admin-only link -->
+        <p><a href="{% url 'core:admin_project_page' %}" class="{% if active_page == 'admin_project_page' %}active{% endif %}">Project Management</a></p>
+
+        {% if user.is_authenticated %}
+            <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
+            <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Users</a></p>
+            <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Projects</a></p>
+            <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Files</a></p>
+            
+
+            {% endif %}
+        {% else %}
+            <!-- Show login links for unauthenticated users -->
+            <p><a href="{% url 'core:login' %}">Login</a></p>
+            <p><a href="{% url 'core:signup' %}">Sign Up</a></p>
+        {% endif %}
+    </div>
+    <div>
+        <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
+        {% if user.is_authenticated and user.is_staff %}
+            <span class="admin-badge"></span>
+        {% endif %}
+    </div>
+</div>
 
 <div id="project-management">
     <div class="project-management-header">
