--- a/Arc_Ai/Arc_Ai/core/templates/core/home.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/home.html
@@ -84,11 +84,20 @@
                 <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
             </div>
             <div id="header_nav" class="text_white">
+
+            {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                    <!-- Admin-only link -->
+                    <p><a href="{% url 'core:admin_project_page' %}" class="{% if active_page == 'admin_project_page' %}active{% endif %}">Project Management</a></p>
+                {% endif %}
+
                 <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
                 <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
                 <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
                 <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-                <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
+                <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'profilepage' %}active{% endif %}">Profile</a></p>
+            {% endif %}
+
             </div>
             <div>
                 <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
